fix scrollbar styles, list of stories counter

--- a/src/app/components/list/list.component.less
+++ b/src/app/components/list/list.component.less
@@ -49,3 +49,7 @@
   background-color: #626565;
   border-radius: 10px;
 }
+
+.mat-badge-content {
+  background-color: #8c2e2e;
+}
