--- a/src/app/components/room/room.component.less
+++ b/src/app/components/room/room.component.less
@@ -85,3 +85,15 @@ app-cards-board {
   font-size: 24px;
   font-weight: 600;
 }
+
+.list-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.timer {
+  color: #8c2e2e;
+  font-size: 16px;
+  font-weight: 600;
+}
